--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,3 +15,13 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 img {
   max-width: 100%;
 }
+
+body{
+  position: fixed;
+  top: 25%;
+  left: 25%;
+}
+
+.submit-button{
+  padding: 25px 40px 25px 40px;
+}
